<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/countFragment"
            android:title="@string/count"
            />

        <item
            android:id="@+id/graphicsFragment"
            android:title="@string/graphics"/>

        <item
            android:id="@+id/fetchedBooksFragment"
            android:title="@string/books"/>

        <item
            android:id="@+id/favoriteBooksFragment"
            android:title="@string/favourite_books"/>
        <item
            android:id="@+id/gamesFragment"
            android:title="@string/games"/>

        <item
            android:id="@+id/exportDataFragment"
            android:title="@string/export_data"/>

    </group>


</menu>